--- a/SNR/snr_peaks.ipynb
+++ b/SNR/snr_peaks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c9b7f778",
    "metadata": {},
    "outputs": [],
@@ -10,38 +10,106 @@
     "import math\n",
     "import numpy as np\n",
     "import astropy.cosmology\n",
-    "from astropy.cosmology import FlatLambdaCDM\n",
-    "import astropy.units as u\n",
-    "from astropy.cosmology import Planck18\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.interpolate import interp1d"
+    "from scipy.signal import find_peaks\n",
+    "from snr_functions import *\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07432434",
+   "execution_count": 2,
+   "id": "5cc6fa8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main():\n",
+    "def load_data(gal_type,dataset,run_type):\n",
+    "    path = f\"/Users/aizaali/Desktop/desi_data/coadd_results/{gal_type}_{dataset}_{run_type}_coadd_results.npz\"\n",
+    "    data = np.load(path)\n",
+    "    snr_narrow = data['snr_narrow']\n",
+    "    wave = data['wavelength']\n",
+    "    return snr_narrow,wave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "be54a005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_results(peaks,snr,wave):\n",
+    "    plt.figure(figsize=(10,5))\n",
+    "    plt.plot(wave, snr, label='SNR')\n",
+    "    plt.plot(wave, peaks, 'ro')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b75887b",
+   "execution_count": 4,
+   "id": "07432434",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# main()"
+    "def main(gal_type,dataset,run_type):\n",
+    "    recovery_threshold = 1\n",
+    "    snr_narrow, wave = load_data(gal_type,dataset,run_type)\n",
+    "    all_peaks = find_peaks(snr_narrow)\n",
+    "    not_known_peaks = reject_known_lines(all_peaks,recovery_threshold)\n",
+    "    # plot!\n",
+    "    plot_results(not_known_peaks,snr_narrow,wave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1b75887b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28mtype\u001b[39m \u001b[38;5;129;01min\u001b[39;00m all_types:\n\u001b[1;32m      6\u001b[0m     entries \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtype\u001b[39m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m     main(entries[\u001b[38;5;241m0\u001b[39m],entries[\u001b[38;5;241m1\u001b[39m],entries[\u001b[38;5;241m2\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[4], line 5\u001b[0m, in \u001b[0;36mmain\u001b[0;34m(gal_type, dataset, run_type)\u001b[0m\n\u001b[1;32m      3\u001b[0m snr_narrow, wave \u001b[38;5;241m=\u001b[39m load_data(gal_type,dataset,run_type)\n\u001b[1;32m      4\u001b[0m all_peaks \u001b[38;5;241m=\u001b[39m find_peaks(snr_narrow)\n\u001b[0;32m----> 5\u001b[0m not_known_peaks \u001b[38;5;241m=\u001b[39m reject_known_lines(all_peaks,recovery_threshold)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# plot!\u001b[39;00m\n\u001b[1;32m      7\u001b[0m plot_results(not_known_peaks,snr_narrow,wave)\n",
+      "File \u001b[0;32m~/Documents/GitHub/DESI_project/SNR/snr_functions.py:88\u001b[0m, in \u001b[0;36mreject_known_lines\u001b[0;34m(matches, tolerance)\u001b[0m\n\u001b[1;32m     48\u001b[0m known_lines \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m770.409\u001b[39m, \u001b[38;5;241m780.324\u001b[39m, \u001b[38;5;241m937.814\u001b[39m, \u001b[38;5;241m949.742\u001b[39m, \u001b[38;5;241m977.030\u001b[39m, \u001b[38;5;241m989.790\u001b[39m, \u001b[38;5;241m991.514\u001b[39m,\n\u001b[1;32m     49\u001b[0m                     \u001b[38;5;241m991.579\u001b[39m, \u001b[38;5;241m1025.722\u001b[39m, \u001b[38;5;241m1031.912\u001b[39m, \u001b[38;5;241m1037.613\u001b[39m, \u001b[38;5;241m1066.660\u001b[39m, \u001b[38;5;241m1215.670\u001b[39m,\n\u001b[1;32m     50\u001b[0m                     \u001b[38;5;241m1238.821\u001b[39m, \u001b[38;5;241m1242.804\u001b[39m, \u001b[38;5;241m1260.422\u001b[39m, \u001b[38;5;241m1264.730\u001b[39m, \u001b[38;5;241m1302.168\u001b[39m, \u001b[38;5;241m1334.532\u001b[39m, \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     85\u001b[0m                     \u001b[38;5;241m9850.260\u001b[39m, \u001b[38;5;241m9913.000\u001b[39m, \u001b[38;5;241m10027.730\u001b[39m, \u001b[38;5;241m10031.160\u001b[39m, \u001b[38;5;241m10049.368\u001b[39m, \u001b[38;5;241m10286.730\u001b[39m,\n\u001b[1;32m     86\u001b[0m                     \u001b[38;5;241m10320.490\u001b[39m, \u001b[38;5;241m10336.410\u001b[39m, \u001b[38;5;241m10746.800\u001b[39m, \u001b[38;5;241m10830.340\u001b[39m, \u001b[38;5;241m10938.086\u001b[39m]\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m matches:\n\u001b[0;32m---> 88\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28mabs\u001b[39m(m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean_wave\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m k) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m tolerance \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m known_lines):\n\u001b[1;32m     89\u001b[0m         clean\u001b[38;5;241m.\u001b[39mappend(m)\n\u001b[1;32m     90\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m clean\n",
+      "File \u001b[0;32m~/Documents/GitHub/DESI_project/SNR/snr_functions.py:88\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     48\u001b[0m known_lines \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m770.409\u001b[39m, \u001b[38;5;241m780.324\u001b[39m, \u001b[38;5;241m937.814\u001b[39m, \u001b[38;5;241m949.742\u001b[39m, \u001b[38;5;241m977.030\u001b[39m, \u001b[38;5;241m989.790\u001b[39m, \u001b[38;5;241m991.514\u001b[39m,\n\u001b[1;32m     49\u001b[0m                     \u001b[38;5;241m991.579\u001b[39m, \u001b[38;5;241m1025.722\u001b[39m, \u001b[38;5;241m1031.912\u001b[39m, \u001b[38;5;241m1037.613\u001b[39m, \u001b[38;5;241m1066.660\u001b[39m, \u001b[38;5;241m1215.670\u001b[39m,\n\u001b[1;32m     50\u001b[0m                     \u001b[38;5;241m1238.821\u001b[39m, \u001b[38;5;241m1242.804\u001b[39m, \u001b[38;5;241m1260.422\u001b[39m, \u001b[38;5;241m1264.730\u001b[39m, \u001b[38;5;241m1302.168\u001b[39m, \u001b[38;5;241m1334.532\u001b[39m, \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     85\u001b[0m                     \u001b[38;5;241m9850.260\u001b[39m, \u001b[38;5;241m9913.000\u001b[39m, \u001b[38;5;241m10027.730\u001b[39m, \u001b[38;5;241m10031.160\u001b[39m, \u001b[38;5;241m10049.368\u001b[39m, \u001b[38;5;241m10286.730\u001b[39m,\n\u001b[1;32m     86\u001b[0m                     \u001b[38;5;241m10320.490\u001b[39m, \u001b[38;5;241m10336.410\u001b[39m, \u001b[38;5;241m10746.800\u001b[39m, \u001b[38;5;241m10830.340\u001b[39m, \u001b[38;5;241m10938.086\u001b[39m]\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m matches:\n\u001b[0;32m---> 88\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28mabs\u001b[39m(m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean_wave\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m k) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m tolerance \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m known_lines):\n\u001b[1;32m     89\u001b[0m         clean\u001b[38;5;241m.\u001b[39mappend(m)\n\u001b[1;32m     90\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m clean\n",
+      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
+   "source": [
+    "# yellow points are peaks/valeys greater than 2.5 SNR\n",
+    "# orange points have been recovered\n",
+    "all_types = ['BGS_loa_galaxy', 'LRG_loa_galaxy', 'BGS_loa_skyfiber', 'LRG_loa_skyfiber',\n",
+    "                'BGS_iron_galaxy', 'LRG_iron_galaxy', 'BGS_iron_skyfiber', 'LRG_iron_skyfiber']\n",
+    "for type in all_types:\n",
+    "    entries = type.split(\"_\")\n",
+    "    main(entries[0],entries[1],entries[2])"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
