--- a/SNR/snr_crossmatch.ipynb
+++ b/SNR/snr_crossmatch.ipynb
@@ -2,69 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "264d6f6e-ae51-4e6f-9fd6-a6e66c6fa5cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.signal import find_peaks\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from snr_functions import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "72458268-eca0-4db1-8ab7-a6b1539ec184",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def crosscheck(results):\n",
-    "    all_lines = []\n",
-    "\n",
-    "    for dataset, lines in results.items():\n",
-    "        for snr, wave in lines:\n",
-    "            all_lines.append({\n",
-    "                \"dataset\": dataset,\n",
-    "                \"wave\": wave,\n",
-    "                \"snr\": snr\n",
-    "            })\n",
-    "    # track lines already used\n",
-    "    used = np.zeros(len(all_lines), dtype=bool)\n",
-    "    final_results = []\n",
-    "\n",
-    "    for i, line in enumerate(all_lines):\n",
-    "        if used[i]:\n",
-    "            continue\n",
-    "\n",
-    "        cluster = [line]\n",
-    "        used[i] = True\n",
-    "\n",
-    "        for j in range(i + 1, len(all_lines)):\n",
-    "            if used[j]:\n",
-    "                continue\n",
-    "            # if lines within 1 A of each other, theyre a match!\n",
-    "            if abs(all_lines[j][\"wave\"] - line[\"wave\"]) <= 1:\n",
-    "                cluster.append(all_lines[j])\n",
-    "                used[j] = True\n",
-    "\n",
-    "        datasets = {c[\"dataset\"] for c in cluster}\n",
-    "\n",
-    "        # \"recovered in ≥ 2\"\n",
-    "        if len(datasets) >= 2:\n",
-    "            final_results.append({\n",
-    "                \"mean_wave\": np.mean([c[\"wave\"] for c in cluster]),\n",
-    "                \"datasets\": sorted(datasets),\n",
-    "                \"snrs\": [c[\"snr\"] for c in cluster],\n",
-    "                \"n_recovered\": len(datasets)\n",
-    "            })\n",
-    "\n",
-    "    return final_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "79f31f8d-168a-4b6b-b73c-db03a51cd4cf",
    "metadata": {},
    "outputs": [],
@@ -101,61 +52,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "7fdf37ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reject_known_lines(matches):\n",
-    "    clean = []\n",
-    "    # http://astronomy.nmsu.edu/drewski/tableofemissionlines.html\n",
-    "    known_lines = [770.409, 780.324, 937.814, 949.742, 977.030, 989.790, 991.514,\n",
-    "                        991.579, 1025.722, 1031.912, 1037.613, 1066.660, 1215.670,\n",
-    "                        1238.821, 1242.804, 1260.422, 1264.730, 1302.168, 1334.532, \n",
-    "                        1335.708, 1393.755, 1397.232, 1399.780, 1402.770, 1486.496,\n",
-    "                        1548.187, 1550.772, 1640.420, 1660.809, 1666.150, 1746.823,\n",
-    "                        1748.656, 1854.716, 1862.790, 1892.030, 1908.734, 2142.780,\n",
-    "                        2320.951, 2323.500, 2324.690, 2648.710, 2733.289, 2782.700,\n",
-    "                        2795.528, 2802.705, 2829.360, 2835.740, 2853.670, 2868.210,\n",
-    "                        2928.000, 2945.106, 3132.794, 3187.745, 3203.100, 3312.329,\n",
-    "                        3345.821, 3425.881, 3444.052, 3466.497, 3466.543, 3487.727,\n",
-    "                        3586.320, 3662.500, 3686.831, 3691.551, 3697.157, 3703.859, \n",
-    "                        3711.977, 3721.945, 3726.032, 3728.815, 3734.369, 3750.158,\n",
-    "                        3758.920, 3770.637, 3797.904, 3835.391, 3839.270, 3868.760, \n",
-    "                        3888.647, 3889.064, 3891.280, 3911.330, 3967.470, 3970.079,\n",
-    "                        4026.190, 4068.600, 4071.240, 4076.349, 4101.742, 4143.761,\n",
-    "                        4178.862, 4180.600, 4233.172, 4227.190, 4287.394, 4303.176,\n",
-    "                        4317.139, 4340.471, 4363.210, 4412.300, 4414.899, 4416.830, \n",
-    "                        4452.098, 4471.479, 4489.183, 4491.405, 4510.910, 4522.634,\n",
-    "                        4555.893, 4582.835, 4583.837, 4629.339, 4634.140, 4640.640,\n",
-    "                        4641.850, 4647.420, 4650.250, 4651.470, 4658.050, 4685.710,\n",
-    "                        4711.260, 4740.120, 4861.333, 4893.370, 4903.070, 4923.927,\n",
-    "                        4958.911, 5006.843, 5018.440, 5084.770, 5145.750, 5158.890,\n",
-    "                        5169.033, 5176.040, 5197.577, 5200.257, 5234.625, 5236.060,\n",
-    "                        5270.400, 5276.002, 5276.380, 5302.860, 5309.110, 5316.615,\n",
-    "                        5316.784, 5335.180, 5424.220, 5517.709, 5537.873, 5637.600,\n",
-    "                        5677.000, 5695.920, 5720.700, 5754.590, 5801.330, 5811.980,\n",
-    "                        5875.624, 6046.440, 6087.000, 6300.304, 6312.060, 6347.100,\n",
-    "                        6363.776, 6369.462, 6374.510, 6516.081, 6548.050, 6562.819,\n",
-    "                        6583.460, 6716.440, 6730.810, 7002.230, 7005.870, 7065.196, \n",
-    "                        7135.790, 7155.157, 7170.620, 7172.000, 7236.420, 7237.260,\n",
-    "                        7254.448, 7262.760, 7281.349, 7319.990, 7330.730, 7377.830,\n",
-    "                        7411.160, 7452.538, 7468.310, 7611.000, 7751.060, 7816.136,\n",
-    "                        7868.194, 7889.900, 7891.800, 8236.790, 8392.397, 8413.318,\n",
-    "                        8437.956, 8446.359, 8467.254, 8498.020, 8502.483, 8542.090,\n",
-    "                        8545.383, 8578.700, 8598.392, 8616.950, 8662.140, 8665.019,\n",
-    "                        8680.282, 8703.247, 8711.703, 8750.472, 8862.782, 8891.910, \n",
-    "                        9014.909, 9068.600, 9229.014, 9531.100, 9545.969, 9824.130,\n",
-    "                        9850.260, 9913.000, 10027.730, 10031.160, 10049.368, 10286.730,\n",
-    "                        10320.490, 10336.410, 10746.800, 10830.340, 10938.086]\n",
-    "    for m in matches:\n",
-    "        if not any(abs(m[\"mean_wave\"] - k) <= 1 for k in known_lines):\n",
-    "            clean.append(m)\n",
-    "    return clean"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "990340d6-b225-4305-975f-44b06ff670a0",
    "metadata": {},
@@ -180,24 +76,24 @@
     "\n",
     "    print(f\"Found {len(matches)} lines recovered in ≥ 2 datasets\")\n",
     "    print(\"Ignoring known lines...\")\n",
-    "    final_result = reject_known_lines(matches)\n",
+    "    final_result = reject_known_lines(matches,1)\n",
     "\n",
     "    df_filtered = pd.DataFrame(final_result)\n",
     "\n",
-    "    df_filtered.to_csv('1_crossmatch_results.csv', index=False)\n",
-    "    print(\"Results saved to '1_crossmatch_results.csv'\")\n",
+    "    df_filtered.to_csv('test_crossmatch_results.csv', index=False)\n",
+    "    print(\"Results saved to 'test_crossmatch_results.csv'\")\n",
     "\n",
-    "    # for m in final_result:\n",
-    "    #     print(\n",
-    "    #         f\"λ = {m['mean_wave']:.2f} Å | \"\n",
-    "    #         f\"N = {m['n_recovered']} | \"\n",
-    "    #         f\"datasets = {m['datasets']}\"\n",
-    "    #     )"
+    "    for m in final_result:\n",
+    "        print(\n",
+    "            f\"λ = {m['mean_wave']:.2f} Å | \"\n",
+    "            f\"N = {m['n_recovered']} | \"\n",
+    "            f\"datasets = {m['datasets']}\"\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "41b4e04f",
    "metadata": {},
    "outputs": [
@@ -224,7 +120,56 @@
       "crossmatching....\n",
       "Found 57 lines recovered in ≥ 2 datasets\n",
       "Ignoring known lines...\n",
-      "Results saved to '1_crossmatch_results.csv'\n"
+      "Results saved to 'test_crossmatch_results.csv'\n",
+      "λ = 3934.80 Å | N = 5 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'BGS_loa_skyfiber_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6586.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 4872.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9533.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 4387.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 4365.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 8501.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1930.75 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6598.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 2798.20 Å | N = 5 | datasets = ['BGS_iron_galaxy_result', 'BGS_iron_skyfiber_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 5185.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9024.50 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 5172.50 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1933.50 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 2343.50 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9019.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 1811.50 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 5009.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 6536.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 5877.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 6565.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 5894.50 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9072.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 2193.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 6750.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9843.50 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 7047.75 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9826.25 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6734.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9092.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 4307.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 7666.50 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6719.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6575.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 5786.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 4863.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9395.50 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9377.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6600.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1800.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1853.50 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9421.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1656.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 8870.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9443.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 4103.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 2326.50 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 8809.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 4120.50 Å | N = 2 | datasets = ['BGS_loa_skyfiber_result', 'LRG_loa_skyfiber_result']\n"
      ]
     }
    ],
