--- a/SNR/snr_peaks.ipynb
+++ b/SNR/snr_peaks.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "be54a005",
    "metadata": {},
    "outputs": [],
@@ -80,6 +80,7 @@
     "\n",
     "    plt.scatter(recover_peak_waves,recover_peak_snrs,label=\"recovered peak \", color = \"red\" )\n",
     "    plt.axhline(2.5, linestyle=\"--\", color=\"gray\", label=\"SNR threshold\")\n",
+    "    plt.axhline(-2.5, linestyle=\"--\", color=\"gray\", label=\"SNR threshold\")\n",
     "    plt.xlabel(\"Wavelength (Å)\")\n",
     "    plt.ylabel(\"SNR\")\n",
     "    plt.title(f\"Unknown emission peaks for {gal_type} {dataset} {run_type}\")\n",
