--- a/copute_dark_matter_emissivity/calculations.ipynb
+++ b/copute_dark_matter_emissivity/calculations.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "aa5f0aa7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "dff1b144",
    "metadata": {},
    "outputs": [],
@@ -46,7 +45,7 @@
     "def calculate_e_dm(redshift,sb_limit,sigma_R):\n",
     "    denom = sigma_R \n",
     "    new_limit = sb_limit* 4.24 * 10**10 #arcsec to steradian\n",
-    "    num = 4*new_limit*math.pi*((1+redshift)**4)\n",
+    "    num = 4*new_limit*np.pi*((1+redshift)**4)\n",
     "    return num/denom"
    ]
   },
@@ -64,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d1c5c795",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_g(gamma):\n",
     "    mass = np.arange(2.8, 12.4, 0.1) #eV\n",
-    "    num = gamma*64*math.pi\n",
+    "    num = gamma*64*np.pi\n",
     "    denom = mass**3\n",
     "    return mass, np.sqrt(num/denom)"
    ]
